fix content jump

--- a/src/components/VoteTimeline/Player/Player.css
+++ b/src/components/VoteTimeline/Player/Player.css
@@ -2,4 +2,5 @@
   display: flex;
   align-items: center;
   min-width: 200px;
+  height: 24px;
 }
